@@ -22,13 +22,19 @@ services.
   over the available P2P networks. The address or addresses is output to
   stdout.
 
-* `--link remotename`
+* `--link`
 
-  Sets up a git remote with the specified remotename that is accessed over
-  a P2P network. 
+  Sets up a git remote that is accessed over a P2P network.
   
   This will prompt for an address to be entered; you should paste in the
   address that was generated by --gen-address in the remote repository.
+
+  Defaults to making the git remote be named "peer1", "peer2",
+  etc. This can be overridden with the `--name` option.
+
+* `--name`
+
+  Specify a name to use when setting up a git remote.
 
 # SEE ALSO
 
